Estilização, classificação e UX

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trabalho Final | Caio H P Lima</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <main>
@@ -13,8 +14,9 @@
             <label for="ip_address">Endereço IPV4: </label>
             <input required type="text" id="ip_address" placeholder="000.000.000.000">
             <button>Enviar</button>
+            <button type="button" id="clear_btn">Limpar</button>
         </form>
-        <code>A</code>
+        <code></code>
     </main>
     <script src="./script.js"></script>
 </body>
