Conversão em binário

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h2>Classificação de Endereços</h2>
         <form id="ip_form">
             <label for="ip_address">Endereço IPV4: </label>
-            <input required type="text" id="ip_address" placeholder="000.000.000.000">
+            <input maxlength="15" required type="text" id="ip_address" placeholder="223.255.255.255">
             <button>Enviar</button>
             <button type="button" id="clear_btn">Limpar</button>
         </form>
